[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "img2catalog"
dynamic = ["version"]
description = 'This tool generates RDF metadata from medical imaging respositories'
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
keywords = []
authors = [{ name = "Mark Janse", email = "mark.janse@health-ri.nl" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "rdflib ~= 7.0.0",
  "xnat ~= 0.5.2",
  "pydantic ~=2.3.0",
  "tqdm>=4.21",
  "tomli >= 1.10; python_version < '3.11'",
  "click >= 8.0.0",
  "click-option-group~=0.5.6",
]

[project.entry-points]
"xnat.cli" = { img2catalog = "img2catalog.cli_app:cli_click" }

[project.urls]
Documentation = "https://github.com/health-ri/img2catalog#readme"
Issues = "https://github.com/health-ri/img2catalog/issues"
Source = "https://github.com/health-ri/img2catalog"

[project.scripts]
img2catalog = "img2catalog.cli_app:cli_click"

[tool.hatch.version]
path = "src/img2catalog/__about__.py"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-mock",
  "requests-mock",
  "pytest-cov",
  "pytest-click",
  "pytest-repeat",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12", "pypy3.9", "pypy3.10"]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report", "coverage xml"]
cov = ["test-cov", "cov-report"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/img2catalog tests}"
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.black]
target-version = ["py38"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["img2catalog"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["img2catalog", "tests"]
branch = true
parallel = true
omit = ["src/img2catalog/__about__.py", "src/img2catalog/__main__.py"]

[tool.coverage.paths]
img2catalog = ["src/img2catalog", "*/img2catalog/src/img2catalog"]
tests = ["tests", "*/img2catalog/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
